# boilify

./: .gitignore  Boilify.cpp  CMakeLists.txt  README.md  install.bat  install.sh
.github/workflows/: linux-release.yml  macos-release.yml  windows-release.yml
Boilify.ofx.bundle/Contents/Resources/: Boilify.xml
Boilify.ofx.bundle/Linux-x86-64/: BoilEffect.ofx
linkedin/: post-1-tired-of-rebuilding-fusion.md  post-2-worse-time-posterize.md  post-3-shader-step-60.md  post-4-50-lines-was-a-lie.md
reddit/: r-davinciresolve.md  r-resolveplugins.md  r-vfx.md
tuner/: README.md  app.js  index.html  style.css
